--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "xur"
 version = "0.1.0"
 edition = "2021"
+repository="https://github.com/pigeonhands/xur"
+description="Toy langage made to be used in a REPL"
+license="MIT"
+readme="README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
